<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTextPersonName8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="101dp"
            android:layout_marginLeft="101dp"
            android:hint="@string/Name"

            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/editTextTextPersonName9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="75dp"
            android:layout_marginLeft="75dp"
            android:hint="@string/Password"

            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_marginLeft="10dp"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Cancel"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>
</LinearLayout>